--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "loophp/collection": "^7.0",
         "symfony/console": "^6.2",
         "symfony/dependency-injection": "^6.2",
-        "symfony/config": "^6.2"
+        "symfony/config": "^6.2",
+        "webmozart/assert": "^1.11"
     },
     "autoload": {
         "psr-4": {
@@ -21,11 +22,17 @@
     },
     "require-dev": {
         "sylius-labs/coding-standard": "^4.3",
-        "symfony/var-dumper": "^6.2"
+        "symfony/var-dumper": "^6.2",
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": false
         }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "ecs": "ecs check --ansi --no-progress-bar",
+        "ecs-fix": "ecs check --fix --ansi"
     }
 }
